[package]
name = "buckle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
url = { version = "2.4.0", features = ["serde"] }
zstd = "0.12.3"
