[package]
name = "buckle"
version = "0.2.1"
edition = "2021"
description = "A lightweight launcher for buck2"
license = "MIT"
repository = "https://github.com/benbrittain/buckle"
authors = ["Benjamin Brittain <ben@brittain.org>"]

[dependencies]
anyhow = "1.0.71"
rust-ini = "0.19"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.6.0"
url = { version = "2.4.0", features = ["serde"] }
zstd = "0.12.3"
once_cell = "1.18.0"
git2 = { version = "0.17.2", default-features=false }
termcolor = "1.2.0"

[dev-dependencies]
assert_cmd = "2.0.11"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
